# AlviumSyncCapture

./: .gitmodules  AlviumSyncCapture.cpp  AlviumSyncCapture.hpp  AlviumSyncCapturePol.cpp  AlviumSyncCapturePol.hpp  AlviumSyncDetect.cpp  AlviumSyncDetect.hpp  CMakeLists.txt  GNSS.cpp  GNSS.hpp  GUICameraWindow.hpp  GUICaptureWindow.hpp  GUIControl.cpp  GUIControl.hpp  GUIDetect.cpp  GUIDetect.hpp  GUIDetectionSettings.hpp  GUIGNSSWindow.hpp  GUIScreen.cpp  GUIScreen.hpp  GUIStackSettings.hpp  ImagePreviewWindow.hpp  PolCam.cpp  PolCam.hpp  README.md  VideoTransientDetection.cpp  VideoTransientDetection.hpp  gpsd  install.sh  main.cpp  ntp.conf
test/: PolCamProcess.cpp  PolCamTest.cpp
